Sass - 1st draft

--- a/content/themes/ocooking/app/scss/main.scss
+++ b/content/themes/ocooking/app/scss/main.scss
@@ -24,7 +24,7 @@
         'components/copyright',
         'components/logo',
         'components/menu',
-        'components/post',
+        'components/home-post',
         'components/recipe-proposal';
 
 // 6. Pages
