Sass - 2nd draft

--- a/content/themes/ocooking/app/scss/abstracts/_variables.scss
+++ b/content/themes/ocooking/app/scss/abstracts/_variables.scss
@@ -1,6 +1,10 @@
 //Font Awesome fonts directory
 $fa-font-path: "~font-awesome/fonts";
 
+$color-primary: #2ebaae;
+$color-background-primary: #F4F4F4;
+$color-background-secondary: #FFF;
+$color-text: #333;
 
 $gutter: 1rem;
 $gutter-layout: 10rem;
