--- a/content/themes/ocooking/app/scss/base/_base.scss
+++ b/content/themes/ocooking/app/scss/base/_base.scss
@@ -1,3 +1,16 @@
+body {
+    background-color: $color-background-primary;
+}
+
+a {
+    color: $color-text;
+
+    &:hover {
+        color: $color-text;
+        text-decoration: none;
+    }
+}
+
 * {
     box-sizing: border-box;
 }
