--- a/content/themes/ocooking/app/scss/components/_home-post.scss
+++ b/content/themes/ocooking/app/scss/components/_home-post.scss
@@ -1,4 +1,4 @@
-.post {
+.home-post {
     background-color: $color-background-secondary;
     display: grid;
     grid: {
@@ -36,6 +36,7 @@
         grid-area: thumbnail;
 
         &__image {
+            height: auto;
             width: 100%;
         }
     }
